<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_complete">OK</string>
    <string name="action_settings">Settings</string>
    <string name="action_new">邀请成员</string>
    <string name="action_quit">退出活动</string>
    <string name="app_name">OverLook</string>
    <!-- Login Layout-->
    <string name="hint_account">手机号</string>
    <string name="hint_password">密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>
    <string name="title_activity_register_phone">手机注册</string>
    <!-- Register Layout-->
    <string name="tv_register_phone">中国+86</string>
    <string name="btn_next">下一步</string>
    <string name="btn_password_verificaton">获取验证码</string>
    <string name="title_activity_register_password">密码填写</string>
    <string name="btn_complete">完成</string>
    <string name="hint_password_verify">密码确认</string>
    <!-- SlidingMenu-->
    <string name="newactivity">新建活动</string>
    <string name="about">关于</string>
    <string name="changepassword">修改密码</string>
    <string name="logout">登出</string>
    <string name="title_activity_welcome">WelcomeActivity</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_name">活动名称</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_invitation">InvitationActivity</string>
    <string name="title_activity_action">ActionActivity</string>
</resources>
