<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/whites">

    <LinearLayout
        android:id="@+id/ll_userinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="2dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_password_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widgets_height"
            android:background="@drawable/border_blue_bg"
            android:layout_margin="5dp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:paddingLeft="@dimen/btn_margin"
            android:paddingRight="@dimen/btn_margin"
            android:hint="@string/hint_password" />

        <EditText
            android:id="@+id/et_password_verification"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/border_blue_bg"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/btn_margin"
            android:paddingRight="@dimen/btn_margin"
            android:hint="@string/hint_password_verify" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/widgets_height"
        android:text="@string/btn_complete"
        android:textColor="@color/whites"
        android:layout_marginLeft="@dimen/btn_margin"
        android:layout_marginRight="@dimen/btn_margin"
        android:background="@drawable/btn_blue_bg"
        android:textSize="@dimen/btn_text_size"
        android:onClick="clickCompleteButton"/>

</LinearLayout>
