<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whites">

    <ImageView
        android:id="@+id/iv_login_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_login_avatar"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_userinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/lbs_popup_bg"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_phonenumber_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/widgets_height"
                android:background="@drawable/et_login_bg"
                android:layout_margin="5dp"
                android:inputType="number"
                android:textColor="@color/black"
                android:hint="@string/hint_account" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/devide_line" />

            <EditText
                android:id="@+id/et_password_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/et_login_bg"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:hint="@string/hint_password" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/widgets_height"
            android:text="@string/btn_login"
            android:textColor="@color/whites"
            android:layout_marginLeft="@dimen/btn_margin"
            android:layout_marginRight="@dimen/btn_margin"
            android:background="@drawable/btn_blue_bg"
            android:textSize="@dimen/btn_text_size"
            android:onClick="clickLoginButton"/>
    </LinearLayout>

    <Button
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/border_blue_bg"
        android:text="@string/btn_register"
        android:textColor="@color/blue"
        android:textSize="@dimen/btn_text_size"
        android:layout_margin="@dimen/btn_register_margin"
        android:onClick="clickRegisterButton"/>
</RelativeLayout>
